--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 ---
 name: IO-Async
-version: 0.07
+version: 0.08
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: a collection of modules that implement asynchronous filehandle IO
 license: perl
 requires:
   IO::Poll: 0
+  Storable: 0
 build_requires:
   Test::Exception: 0
   Test::More: 0
@@ -14,26 +15,33 @@ build_requires:
 provides:
   IO::Async::Buffer:
     file: lib/IO/Async/Buffer.pm
-    version: 0.07
+    version: 0.08
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.07
+    version: 0.08
+  IO::Async::DetachedCode:
+    file: lib/IO/Async/DetachedCode.pm
+    version: 0.08
+  IO::Async::DetachedCode::FlatMarshaller:
+    file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
+  IO::Async::DetachedCode::StorableMarshaller:
+    file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.07
+    version: 0.08
   IO::Async::Set:
     file: lib/IO/Async/Set.pm
-    version: 0.07
+    version: 0.08
   IO::Async::Set::GMainLoop:
     file: lib/IO/Async/Set/GMainLoop.pm
-    version: 0.07
+    version: 0.08
   IO::Async::Set::IO_Poll:
     file: lib/IO/Async/Set/IO_Poll.pm
-    version: 0.07
+    version: 0.08
   IO::Async::Set::Select:
     file: lib/IO/Async/Set/Select.pm
-    version: 0.07
+    version: 0.08
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.07
+    version: 0.08
 generated_by: Module::Build version 0.26
