--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 ---
 name: IO-Async
-version: 0.08
+version: 0.09
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: a collection of modules that implement asynchronous filehandle IO
 license: perl
 requires:
+  Heap: 0
   IO::Poll: 0
   Storable: 0
 build_requires:
@@ -15,33 +16,42 @@ build_requires:
 provides:
   IO::Async::Buffer:
     file: lib/IO/Async/Buffer.pm
-    version: 0.08
+    version: 0.09
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.08
+    version: 0.09
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.08
+    version: 0.09
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
+  IO::Async::MergePoint:
+    file: lib/IO/Async/MergePoint.pm
+    version: 0.09
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.08
+    version: 0.09
   IO::Async::Set:
     file: lib/IO/Async/Set.pm
-    version: 0.08
+    version: 0.09
   IO::Async::Set::GMainLoop:
     file: lib/IO/Async/Set/GMainLoop.pm
-    version: 0.08
+    version: 0.09
   IO::Async::Set::IO_Poll:
     file: lib/IO/Async/Set/IO_Poll.pm
-    version: 0.08
+    version: 0.09
   IO::Async::Set::Select:
     file: lib/IO/Async/Set/Select.pm
-    version: 0.08
+    version: 0.09
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.08
+    version: 0.09
+  IO::Async::TimeQueue:
+    file: lib/IO/Async/TimeQueue.pm
+    version: 0.09
+  IO::Async::TimeQueue::Elem:
+    file: lib/IO/Async/TimeQueue.pm
+    version: 0.09
 generated_by: Module::Build version 0.26
