--- a/META.yml
+++ b/META.yml
@@ -1,57 +1,62 @@
 ---
 name: IO-Async
-version: 0.09
+version: 0.10
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: a collection of modules that implement asynchronous filehandle IO
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
   Heap: 0
   IO::Poll: 0
   Storable: 0
 build_requires:
+  File::Temp: 0
   Test::Exception: 0
   Test::More: 0
   Time::HiRes: 0
 provides:
   IO::Async::Buffer:
     file: lib/IO/Async/Buffer.pm
-    version: 0.09
+    version: 0.10
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.09
+    version: 0.10
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.09
+    version: 0.10
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.09
+    version: 0.10
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.09
+    version: 0.10
   IO::Async::Set:
     file: lib/IO/Async/Set.pm
-    version: 0.09
+    version: 0.10
   IO::Async::Set::GMainLoop:
     file: lib/IO/Async/Set/GMainLoop.pm
-    version: 0.09
+    version: 0.10
   IO::Async::Set::IO_Poll:
     file: lib/IO/Async/Set/IO_Poll.pm
-    version: 0.09
+    version: 0.10
   IO::Async::Set::Select:
     file: lib/IO/Async/Set/Select.pm
-    version: 0.09
+    version: 0.10
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.09
+    version: 0.10
   IO::Async::TimeQueue:
     file: lib/IO/Async/TimeQueue.pm
-    version: 0.09
+    version: 0.10
   IO::Async::TimeQueue::Elem:
     file: lib/IO/Async/TimeQueue.pm
-    version: 0.09
-generated_by: Module::Build version 0.26
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
