Import of PEVANS/IO-Async-0.11 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.11
gitpan-cpan-path:         PEVANS/IO-Async-0.11.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: IO-Async
-version: 0.10
+version: 0.11
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: a collection of modules that implement asynchronous filehandle IO
@@ -10,6 +10,7 @@ resources:
 requires:
   Heap: 0
   IO::Poll: 0
+  Socket::GetAddrInfo: 0
   Storable: 0
 build_requires:
   File::Temp: 0
@@ -22,20 +23,38 @@ provides:
     version: 0.10
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.10
+    version: 0.11
+  IO::Async::Connector:
+    file: lib/IO/Async/Connector.pm
+    version: 0.11
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.10
+    version: 0.11
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
+  IO::Async::Loop:
+    file: lib/IO/Async/Loop.pm
+    version: 0.11
+  IO::Async::Loop::Glib:
+    file: lib/IO/Async/Loop/Glib.pm
+    version: 0.11
+  IO::Async::Loop::IO_Poll:
+    file: lib/IO/Async/Loop/IO_Poll.pm
+    version: 0.11
+  IO::Async::Loop::Select:
+    file: lib/IO/Async/Loop/Select.pm
+    version: 0.11
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.10
+    version: 0.11
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.10
+    version: 0.11
+  IO::Async::Resolver:
+    file: lib/IO/Async/Resolver.pm
+    version: 0.11
   IO::Async::Set:
     file: lib/IO/Async/Set.pm
     version: 0.10
@@ -50,10 +69,13 @@ provides:
     version: 0.10
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.10
+    version: 0.11
+  IO::Async::Stream:
+    file: lib/IO/Async/Stream.pm
+    version: 0.11
   IO::Async::TimeQueue:
     file: lib/IO/Async/TimeQueue.pm
-    version: 0.10
+    version: 0.11
   IO::Async::TimeQueue::Elem:
     file: lib/IO/Async/TimeQueue.pm
 generated_by: Module::Build version 0.2808
