Import of PEVANS/IO-Async-0.13 from CPAN.
gitpan-cpan-distribution: IO-Async
gitpan-cpan-version:      0.13
gitpan-cpan-path:         PEVANS/IO-Async-0.13.tar.gz
gitpan-cpan-author:       PEVANS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,11 @@
 ---
 name: IO-Async
-version: 0.12
+version: 0.13
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
-abstract: a collection of modules that implement asynchronous filehandle IO
+abstract: |-
+  a collection of modules that implement asynchronous filehandle
+  IO
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
@@ -18,40 +20,43 @@ build_requires:
   Test::More: 0
   Time::HiRes: 0
 provides:
+  IO::Async:
+    file: lib/IO/Async.pm
+    version: 0.13
   IO::Async::Buffer:
     file: lib/IO/Async/Buffer.pm
     version: 0.10
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.12
+    version: 0.13
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.12
+    version: 0.13
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Loop::IO_Poll:
     file: lib/IO/Async/Loop/IO_Poll.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.12
+    version: 0.13
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Set:
     file: lib/IO/Async/Set.pm
     version: 0.10
@@ -63,13 +68,16 @@ provides:
     version: 0.10
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.12
+    version: 0.13
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.12
+    version: 0.13
+  IO::Async::Test:
+    file: lib/IO/Async/Test.pm
+    version: 0.13
   IO::Async::TimeQueue:
     file: lib/IO/Async/TimeQueue.pm
-    version: 0.12
+    version: 0.13
   IO::Async::TimeQueue::Elem:
     file: lib/IO/Async/TimeQueue.pm
 generated_by: Module::Build version 0.2808
