--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: IO-Async
-version: 0.14_2
+version: 0.14
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: |-
@@ -22,47 +22,47 @@ build_requires:
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Buffer:
     file: lib/IO/Async/Buffer.pm
     version: 0.10
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Loop::IO_Poll:
     file: lib/IO/Async/Loop/IO_Poll.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Sequencer:
     file: lib/IO/Async/Sequencer.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Set::IO_Poll:
     file: lib/IO/Async/Set/IO_Poll.pm
     version: 0.10
@@ -71,16 +71,16 @@ provides:
     version: 0.10
   IO::Async::SignalProxy:
     file: lib/IO/Async/SignalProxy.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::TimeQueue:
     file: lib/IO/Async/TimeQueue.pm
-    version: 0.14_2
+    version: 0.14
   IO::Async::TimeQueue::Elem:
     file: lib/IO/Async/TimeQueue.pm
 generated_by: Module::Build version 0.280801
