--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: IO-Async
-version: 0.19
+version: 0.20
 author:
   - 'Paul Evans E<lt>leonerd@leonerd.org.ukE<gt>'
 abstract: |-
@@ -10,72 +10,74 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  Async::MergePoint: 0
   Heap: 0.8
   IO::Poll: 0
   Socket::GetAddrInfo: 0.08
   Storable: 0
+  Time::HiRes: 0
 build_requires:
   File::Temp: 0
   Test::Exception: 0
   Test::More: 0
   Test::Refcount: 0
-  Time::HiRes: 0
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.19
+    version: 0.20
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.19
+    version: 0.20
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.19
+    version: 0.20
   IO::Async::DetachedCode::FlatMarshaller:
     file: lib/IO/Async/DetachedCode/FlatMarshaller.pm
   IO::Async::DetachedCode::StorableMarshaller:
     file: lib/IO/Async/DetachedCode/StorableMarshaller.pm
+  IO::Async::Handle:
+    file: lib/IO/Async/Handle.pm
+    version: 0.20
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Loop::IO_Poll:
     file: lib/IO/Async/Loop/IO_Poll.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.19
+    version: 0.20
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Sequencer:
     file: lib/IO/Async/Sequencer.pm
-    version: 0.19
-  IO::Async::SignalProxy:
-    file: lib/IO/Async/SignalProxy.pm
-    version: 0.19
+    version: 0.20
+  IO::Async::Signal:
+    file: lib/IO/Async/Signal.pm
+    version: 0.20
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.19
+    version: 0.20
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.19
-  IO::Async::TimeQueue:
-    file: lib/IO/Async/TimeQueue.pm
-    version: 0.19
-  IO::Async::TimeQueue::Elem:
-    file: lib/IO/Async/TimeQueue/Elem.pm
-generated_by: Module::Build version 0.280801
+    version: 0.20
+  IO::Async::Timer:
+    file: lib/IO/Async/Timer.pm
+    version: 0.20
+generated_by: Module::Build version 0.3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
