--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,84 @@
 ---
-name: IO-Async
-version: 0.27
+abstract: 'perform asynchronous filehandle IO and other operations'
 author:
   - 'Paul Evans <leonerd@leonerd.org.uk>'
-abstract: perform asynchronous filehandle IO and other operations
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
 build_requires:
   File::Temp: 0
   Test::Exception: 0
   Test::More: 0
   Test::Refcount: 0
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: IO-Async
+provides:
+  IO::Async:
+    file: lib/IO/Async.pm
+    version: 0.28
+  IO::Async::ChildManager:
+    file: lib/IO/Async/ChildManager.pm
+    version: 0.28
+  IO::Async::Connector:
+    file: lib/IO/Async/Connector.pm
+    version: 0.28
+  IO::Async::DetachedCode:
+    file: lib/IO/Async/DetachedCode.pm
+    version: 0.28
+  IO::Async::Handle:
+    file: lib/IO/Async/Handle.pm
+    version: 0.28
+  IO::Async::Listener:
+    file: lib/IO/Async/Listener.pm
+    version: 0.28
+  IO::Async::Loop:
+    file: lib/IO/Async/Loop.pm
+    version: 0.28
+  IO::Async::Loop::IO_Poll:
+    file: lib/IO/Async/Loop/IO_Poll.pm
+    version: 0.28
+  IO::Async::Loop::Poll:
+    file: lib/IO/Async/Loop/Poll.pm
+    version: 0.28
+  IO::Async::Loop::Select:
+    file: lib/IO/Async/Loop/Select.pm
+    version: 0.28
+  IO::Async::LoopTests:
+    file: lib/IO/Async/LoopTests.pm
+    version: 0.28
+  IO::Async::MergePoint:
+    file: lib/IO/Async/MergePoint.pm
+    version: 0.28
+  IO::Async::Notifier:
+    file: lib/IO/Async/Notifier.pm
+    version: 0.28
+  IO::Async::Resolver:
+    file: lib/IO/Async/Resolver.pm
+    version: 0.28
+  IO::Async::Sequencer:
+    file: lib/IO/Async/Sequencer.pm
+    version: 0.28
+  IO::Async::Signal:
+    file: lib/IO/Async/Signal.pm
+    version: 0.28
+  IO::Async::Stream:
+    file: lib/IO/Async/Stream.pm
+    version: 0.28
+  IO::Async::Test:
+    file: lib/IO/Async/Test.pm
+    version: 0.28
+  IO::Async::Timer:
+    file: lib/IO/Async/Timer.pm
+    version: 0.28
+  IO::Async::Timer::Countdown:
+    file: lib/IO/Async/Timer/Countdown.pm
+    version: 0.28
+  IO::Async::Timer::Periodic:
+    file: lib/IO/Async/Timer/Periodic.pm
+    version: 0.28
 requires:
   Async::MergePoint: 0
   Heap: 0.8
@@ -19,73 +86,6 @@ requires:
   Socket::GetAddrInfo: 0.08
   Storable: 0
   Time::HiRes: 0
-configure_requires:
-  Module::Build: 0.35
-provides:
-  IO::Async:
-    file: lib/IO/Async.pm
-    version: 0.27
-  IO::Async::ChildManager:
-    file: lib/IO/Async/ChildManager.pm
-    version: 0.27
-  IO::Async::Connector:
-    file: lib/IO/Async/Connector.pm
-    version: 0.27
-  IO::Async::DetachedCode:
-    file: lib/IO/Async/DetachedCode.pm
-    version: 0.27
-  IO::Async::Handle:
-    file: lib/IO/Async/Handle.pm
-    version: 0.27
-  IO::Async::Listener:
-    file: lib/IO/Async/Listener.pm
-    version: 0.27
-  IO::Async::Loop:
-    file: lib/IO/Async/Loop.pm
-    version: 0.27
-  IO::Async::Loop::IO_Poll:
-    file: lib/IO/Async/Loop/IO_Poll.pm
-    version: 0.27
-  IO::Async::Loop::Poll:
-    file: lib/IO/Async/Loop/Poll.pm
-    version: 0.27
-  IO::Async::Loop::Select:
-    file: lib/IO/Async/Loop/Select.pm
-    version: 0.27
-  IO::Async::LoopTests:
-    file: lib/IO/Async/LoopTests.pm
-    version: 0.27
-  IO::Async::MergePoint:
-    file: lib/IO/Async/MergePoint.pm
-    version: 0.27
-  IO::Async::Notifier:
-    file: lib/IO/Async/Notifier.pm
-    version: 0.27
-  IO::Async::Resolver:
-    file: lib/IO/Async/Resolver.pm
-    version: 0.27
-  IO::Async::Sequencer:
-    file: lib/IO/Async/Sequencer.pm
-    version: 0.27
-  IO::Async::Signal:
-    file: lib/IO/Async/Signal.pm
-    version: 0.27
-  IO::Async::Stream:
-    file: lib/IO/Async/Stream.pm
-    version: 0.27
-  IO::Async::Test:
-    file: lib/IO/Async/Test.pm
-    version: 0.27
-  IO::Async::Timer:
-    file: lib/IO/Async/Timer.pm
-    version: 0.27
-  IO::Async::Timer::Countdown:
-    file: lib/IO/Async/Timer/Countdown.pm
-    version: 0.27
-  IO::Async::Timer::Periodic:
-    file: lib/IO/Async/Timer/Periodic.pm
-    version: 0.27
-generated_by: Module::Build version 0.35
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.28
