--- a/META.yml
+++ b/META.yml
@@ -19,74 +19,83 @@ name: IO-Async
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.29
+    version: 0.30
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.29
+    version: 0.30
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Handle:
     file: lib/IO/Async/Handle.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Loop::IO_Poll:
     file: lib/IO/Async/Loop/IO_Poll.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Loop::Poll:
     file: lib/IO/Async/Loop/Poll.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.29
+    version: 0.30
   IO::Async::LoopTests:
     file: lib/IO/Async/LoopTests.pm
-    version: 0.29
+    version: 0.30
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.29
+    version: 0.30
+  IO::Async::Protocol:
+    file: lib/IO/Async/Protocol.pm
+    version: 0.30
+  IO::Async::Protocol::Stream:
+    file: lib/IO/Async/Protocol/Stream.pm
+    version: 0.30
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Sequencer:
     file: lib/IO/Async/Sequencer.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Signal:
     file: lib/IO/Async/Signal.pm
-    version: 0.29
+    version: 0.30
+  IO::Async::Socket:
+    file: lib/IO/Async/Socket.pm
+    version: 0.30
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Timer:
     file: lib/IO/Async/Timer.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Timer::Countdown:
     file: lib/IO/Async/Timer/Countdown.pm
-    version: 0.29
+    version: 0.30
   IO::Async::Timer::Periodic:
     file: lib/IO/Async/Timer/Periodic.pm
-    version: 0.29
+    version: 0.30
 requires:
   Async::MergePoint: 0
   Heap: 0.80
   IO::Poll: 0
-  Socket::GetAddrInfo: 0.08
+  Socket::GetAddrInfo: 0.18
   Storable: 0
   Time::HiRes: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.29
+version: 0.30
