--- a/META.yml
+++ b/META.yml
@@ -20,88 +20,91 @@ name: IO-Async
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.39
+    version: 0.40
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.39
+    version: 0.40
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.39
+    version: 0.40
+  IO::Async::FileStream:
+    file: lib/IO/Async/FileStream.pm
+    version: 0.40
   IO::Async::Function:
     file: lib/IO/Async/Function.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Handle:
     file: lib/IO/Async/Handle.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Loop::Poll:
     file: lib/IO/Async/Loop/Poll.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.39
+    version: 0.40
   IO::Async::LoopTests:
     file: lib/IO/Async/LoopTests.pm
-    version: 0.39
+    version: 0.40
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.39
+    version: 0.40
   IO::Async::PID:
     file: lib/IO/Async/PID.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Process:
     file: lib/IO/Async/Process.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Protocol:
     file: lib/IO/Async/Protocol.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Protocol::LineStream:
     file: lib/IO/Async/Protocol/LineStream.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Protocol::Stream:
     file: lib/IO/Async/Protocol/Stream.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Sequencer:
     file: lib/IO/Async/Sequencer.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Signal:
     file: lib/IO/Async/Signal.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Socket:
     file: lib/IO/Async/Socket.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Timer:
     file: lib/IO/Async/Timer.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Timer::Absolute:
     file: lib/IO/Async/Timer/Absolute.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Timer::Countdown:
     file: lib/IO/Async/Timer/Countdown.pm
-    version: 0.39
+    version: 0.40
   IO::Async::Timer::Periodic:
     file: lib/IO/Async/Timer/Periodic.pm
-    version: 0.39
+    version: 0.40
 requires:
   Async::MergePoint: 0
   CPS: 0
@@ -112,4 +115,4 @@ requires:
   Time::HiRes: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.39
+version: 0.40
