--- a/META.yml
+++ b/META.yml
@@ -9,8 +9,6 @@ build_requires:
   Test::More: 0
   Test::Refcount: 0
   Test::Warn: 0
-configure_requires:
-  Module::Build: 0
 dynamic_config: 1
 generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120630'
 license: perl
@@ -21,102 +19,105 @@ name: IO-Async
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Channel:
     file: lib/IO/Async/Channel.pm
-    version: 0.49
+    version: 0.50
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Connector:
     file: lib/IO/Async/Connector.pm
-    version: 0.49
+    version: 0.50
   IO::Async::DetachedCode:
     file: lib/IO/Async/DetachedCode.pm
-    version: 0.49
+    version: 0.50
+  IO::Async::File:
+    file: lib/IO/Async/File.pm
+    version: 0.50
   IO::Async::FileStream:
     file: lib/IO/Async/FileStream.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Function:
     file: lib/IO/Async/Function.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Handle:
     file: lib/IO/Async/Handle.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Loop::Poll:
     file: lib/IO/Async/Loop/Poll.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.49
+    version: 0.50
   IO::Async::LoopTests:
     file: lib/IO/Async/LoopTests.pm
-    version: 0.49
+    version: 0.50
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.49
+    version: 0.50
   IO::Async::PID:
     file: lib/IO/Async/PID.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Process:
     file: lib/IO/Async/Process.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Protocol:
     file: lib/IO/Async/Protocol.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Protocol::LineStream:
     file: lib/IO/Async/Protocol/LineStream.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Protocol::Stream:
     file: lib/IO/Async/Protocol/Stream.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Routine:
     file: lib/IO/Async/Routine.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Sequencer:
     file: lib/IO/Async/Sequencer.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Signal:
     file: lib/IO/Async/Signal.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Socket:
     file: lib/IO/Async/Socket.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Timer:
     file: lib/IO/Async/Timer.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Timer::Absolute:
     file: lib/IO/Async/Timer/Absolute.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Timer::Countdown:
     file: lib/IO/Async/Timer/Countdown.pm
-    version: 0.49
+    version: 0.50
   IO::Async::Timer::Periodic:
     file: lib/IO/Async/Timer/Periodic.pm
-    version: 0.49
+    version: 0.50
 requires:
   Async::MergePoint: 0.03
   CPS: 0
   Exporter: 5.57
-  Heap: 0.80
+  File::stat: 0
   IO::Poll: 0
   Socket: 1.95
   Storable: 0
@@ -124,4 +125,4 @@ requires:
   perl: 5.008005
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.49
+version: 0.50
