--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
   Test::More: 0.88
   Test::Refcount: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4001, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,103 +18,106 @@ name: IO-Async
 provides:
   IO::Async:
     file: lib/IO/Async.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Channel:
     file: lib/IO/Async/Channel.pm
-    version: 0.58
+    version: 0.59
   IO::Async::ChildManager:
     file: lib/IO/Async/ChildManager.pm
-    version: 0.58
-  IO::Async::Connector:
-    file: lib/IO/Async/Connector.pm
-    version: 0.58
+    version: 0.59
   IO::Async::File:
     file: lib/IO/Async/File.pm
-    version: 0.58
+    version: 0.59
   IO::Async::FileStream:
     file: lib/IO/Async/FileStream.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Function:
     file: lib/IO/Async/Function.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Future:
     file: lib/IO/Async/Future.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Handle:
     file: lib/IO/Async/Handle.pm
-    version: 0.58
+    version: 0.59
+  IO::Async::Internals::Connector:
+    file: lib/IO/Async/Internals/Connector.pm
+    version: 0.59
   IO::Async::Listener:
     file: lib/IO/Async/Listener.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Loop:
     file: lib/IO/Async/Loop.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Loop::Poll:
     file: lib/IO/Async/Loop/Poll.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Loop::Select:
     file: lib/IO/Async/Loop/Select.pm
-    version: 0.58
+    version: 0.59
   IO::Async::LoopTests:
     file: lib/IO/Async/LoopTests.pm
-    version: 0.58
+    version: 0.59
   IO::Async::MergePoint:
     file: lib/IO/Async/MergePoint.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Notifier:
     file: lib/IO/Async/Notifier.pm
-    version: 0.58
+    version: 0.59
   IO::Async::OS:
     file: lib/IO/Async/OS.pm
-    version: 0.58
+    version: 0.59
   IO::Async::OS::MSWin32:
     file: lib/IO/Async/OS/MSWin32.pm
-    version: 0.58
+    version: 0.59
+  IO::Async::OS::cygwin:
+    file: lib/IO/Async/OS/cygwin.pm
+    version: 0.59
   IO::Async::PID:
     file: lib/IO/Async/PID.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Process:
     file: lib/IO/Async/Process.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Protocol:
     file: lib/IO/Async/Protocol.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Protocol::LineStream:
     file: lib/IO/Async/Protocol/LineStream.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Protocol::Stream:
     file: lib/IO/Async/Protocol/Stream.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Resolver:
     file: lib/IO/Async/Resolver.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Routine:
     file: lib/IO/Async/Routine.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Signal:
     file: lib/IO/Async/Signal.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Socket:
     file: lib/IO/Async/Socket.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Stream:
     file: lib/IO/Async/Stream.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Test:
     file: lib/IO/Async/Test.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Timer:
     file: lib/IO/Async/Timer.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Timer::Absolute:
     file: lib/IO/Async/Timer/Absolute.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Timer::Countdown:
     file: lib/IO/Async/Timer/Countdown.pm
-    version: 0.58
+    version: 0.59
   IO::Async::Timer::Periodic:
     file: lib/IO/Async/Timer/Periodic.pm
-    version: 0.58
+    version: 0.59
 recommends:
   IO::Socket::IP: 0
 requires:
@@ -128,4 +131,4 @@ requires:
   perl: 5.010
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.58
+version: 0.59
